--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,6 +11,7 @@ html, body, #root {
   width: 100%;
   margin: 0;
   overflow: hidden;
+  user-select: none;
 
   /* -ms-overflow-style: none;  IE and Edge */
   /* scrollbar-width: none;     Firefox */
